1.1.2:
	- Search searches all fields (Bug 198671)
	- Revised tagging UI
	- Expand plugin API
	- Unbreak sorting in list view (Bug 202188)
1.1.1:
	- Updated Russian translation (Sergey Kirpichev)
	- Updated simplified Chinese translation (Zhi-Wei Huang)
	- Updated Danish translation (Andreas Dalsgaard)
	- Fix parsing data-less elements in pubmed plugin (Bug 196174)
	- Fix paste in document properties (Bug 195819)
	- Fix add doc with ID dialog
	- Make "All" and "Untagged" immutable, add separator (Bug 192680, Jochen Martin Eppler)
	- Check for zero-sized thumbnails (Bug 192279)
	- Add parse_bibtex to PythonDocument
	- Fix compilation with gcc 4.3 (Deji Akingunola)

1.1.0:
	- Update to bibutils 3.39
	- Detailed report in add documents dialog
	- Thumbnails generated asynchronously for more responsive loading
	- Support document action plugins (AN + JCS)
	- Lyx citation plugin (Aurélien Naldi)
	- Added documents are scrolled to
	- DocumentProperties shows correct fields depending on document type
	- Add google scholar web link
	- Add PubMed web link
	- Allow specific selection of different web links
	- Add builtin generic document icon
	- Paste BibTeX button in document properties
	- Clear button in document properties
	- Editable list view
	- Fix crash in tagging 
	- Revised icon view
	- Pick up when citebase gives us a doi: in the URL field
	- Add preferences options for crossref username/password
	- Remove preferences options for crossref path + dx.doi.org path
	- Metadata plugins (C++ or python)
	- DOI->Pubmed resolver (Simon Greenhill)
	- Make multiple-tag filtering AND instead of OR
	- Fix losing bibtex fields in import (Bug 158581)
	- Fix missing some fields in getArxiv (Bug 158815)
	- Use gtkmm 2.12 IconView tooltip support if available
	- Add online/offline indicator in statusbar
	- Change sizing options of icon view to work around Gnome 2.20
	- Use filename as title when adding files without metadata